--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,7 @@ include:
     shield: sofle_left
   - board: nice_nano
     shield: sofle_right
+  - board: nice_nano_v2
+    shield: sofle_left
+  - board: nice_nano_v2
+    shield: sofle_right
